--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: coffee --default;
+  themes: sunset --default;
 }
 
 /* Custom styles for article content */
